finish bottom text and fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="whiteGrey">#6D6D6D</color>
-    <color name="moreWhiteGrey">#EEEEEE</color>
+    <color name="contactWhiteGrey">#EEEEEE</color>
     <color name="hotbgcolor">#F5F5F5</color>
     <color name="sendButtonColor">#757575</color>
 
