--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,35 @@
         android:background="@color/grey" >
 
         <RelativeLayout
+            android:id="@+id/home_layout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:orientation="vertical" >
+
+                <ImageView
+                    android:id="@+id/home_image"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@mipmap/ic_launcher" />
+
+                <TextView
+                    android:id="@+id/home_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/home"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/contact_layout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -52,8 +81,9 @@
             </LinearLayout>
         </RelativeLayout>
 
+
         <RelativeLayout
-            android:id="@+id/more_layout"
+            android:id="@+id/moment_layout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" >
@@ -65,22 +95,21 @@
                 android:orientation="vertical" >
 
                 <ImageView
-                    android:id="@+id/more_image"
+                    android:id="@+id/moment_image"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_gravity="center_horizontal"
                     android:src="@mipmap/ic_launcher" />
 
                 <TextView
-                    android:id="@+id/more_text"
+                    android:id="@+id/moment_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="@string/more"
+                    android:text="@string/moment"
                     android:textColor="@color/white" />
             </LinearLayout>
         </RelativeLayout>
-
 
         <RelativeLayout
             android:id="@+id/user_layout"
@@ -103,35 +132,6 @@
 
                 <TextView
                     android:id="@+id/user_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/user"
-                    android:textColor="@color/white" />
-            </LinearLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/extra_layout"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:orientation="vertical" >
-
-                <ImageView
-                    android:id="@+id/extra_image"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@mipmap/ic_launcher" />
-
-                <TextView
-                    android:id="@+id/extra_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
