--- a/app/src/main/res/layout/fragment_moment.xml
+++ b/app/src/main/res/layout/fragment_moment.xml
@@ -2,7 +2,7 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/hotbgcolor"
+    android:background="@color/backgroundcolor"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:layout_width="wrap_content"
