--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,7 +41,7 @@
             android:text="@string/scan"
             android:textColor="@color/colorPrimary"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+            app:layout_constraintTop_toBottomOf="@id/imageButton" />
 
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/editText"
@@ -51,9 +51,9 @@
             android:enabled="false"
             android:inputType="textPersonName"
             app:backgroundTint="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="@+id/textView2"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/imageButton" />
+            app:layout_constraintBottom_toBottomOf="@id/textView2"
+            app:layout_constraintEnd_toStartOf="@id/imageView"
+            app:layout_constraintStart_toEndOf="@id/imageButton" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_cloths"
