--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -19,7 +19,7 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -41,7 +41,7 @@
         app:srcCompat="@mipmap/ic_launcher" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_avatar"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="32dp"
@@ -51,19 +51,19 @@
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@id/imageView2"
-        app:layout_constraintTop_toTopOf="@id/imageView2"
+        app:layout_constraintStart_toEndOf="@id/iv_avatar"
+        app:layout_constraintTop_toTopOf="@id/iv_avatar"
         android:text="夏天" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tv_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -71,16 +71,15 @@
         android:text="12345678910@qq.com"
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@id/imageView2"
-        app:layout_constraintTop_toBottomOf="@id/textView5"
-        />
+        app:layout_constraintStart_toEndOf="@id/iv_avatar"
+        app:layout_constraintTop_toBottomOf="@id/tv_username" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/imageView2"
+        app:layout_constraintTop_toTopOf="@id/iv_avatar"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -89,48 +88,48 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:text="@string/purchasing_number"
+        android:text="@string/purchasing_coin"
         android:textColor="@color/purchasingcolor"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tv_usercoin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="25"
         android:textColor="@color/purchasingcolor"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@id/textView7"
         app:layout_constraintEnd_toEndOf="@id/textView7"
-        app:layout_constraintTop_toBottomOf="@id/textView7"
-        android:text="25" />
+        app:layout_constraintStart_toStartOf="@id/textView7"
+        app:layout_constraintTop_toBottomOf="@id/textView7" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="@string/purchasing_score"
+        android:text="@string/purchasing_authenticated"
         android:textColor="@color/purchasingcolor"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/textView7" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/tv_userauthenticated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="82"
         android:textColor="@color/purchasingcolor"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@id/textView9"
         app:layout_constraintEnd_toEndOf="@id/textView9"
-        app:layout_constraintTop_toBottomOf="@id/textView9"
-        android:text="82" />
+        app:layout_constraintStart_toStartOf="@id/textView9"
+        app:layout_constraintTop_toBottomOf="@id/textView9" />
 
     <TextView
         android:id="@+id/textView11"
@@ -145,17 +144,17 @@
         app:layout_constraintTop_toTopOf="@id/textView7" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/tv_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="香港"
         android:textColor="@color/purchasingcolor"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@id/textView11"
         app:layout_constraintEnd_toEndOf="@id/textView11"
-        app:layout_constraintTop_toBottomOf="@id/textView11"
-        android:text="香港" />
+        app:layout_constraintStart_toStartOf="@id/textView11"
+        app:layout_constraintTop_toBottomOf="@id/textView11" />
 
     <ImageView
         android:id="@+id/imageView4"
