--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -19,7 +19,30 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/setting"
+        android:id="@+id/tv_not_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="你还没有登录"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/frameLayout"
+        app:layout_constraintEnd_toEndOf="@id/frameLayout"
+        app:layout_constraintStart_toStartOf="@id/frameLayout"
+        app:layout_constraintTop_toTopOf="@id/frameLayout" />
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="登录"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@id/frameLayout"
+        app:layout_constraintStart_toStartOf="@id/frameLayout"
+        app:layout_constraintTop_toBottomOf="@id/tv_not_login" />
+
+    <TextView
+        android:id="@+id/tv_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -218,7 +241,7 @@
         app:layout_constraintTop_toBottomOf="@id/imageView6" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/view1"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="24dp"
@@ -233,7 +256,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@id/imageView9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view"
+        app:layout_constraintTop_toBottomOf="@id/view1"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -255,7 +278,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageView10"
-        app:layout_constraintTop_toBottomOf="@id/view"
+        app:layout_constraintTop_toBottomOf="@id/view1"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -276,7 +299,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@id/imageView11"
         app:layout_constraintStart_toEndOf="@id/imageView7"
-        app:layout_constraintTop_toBottomOf="@id/view"
+        app:layout_constraintTop_toBottomOf="@id/view1"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -297,7 +320,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@id/imageView8"
         app:layout_constraintStart_toEndOf="@id/imageView11"
-        app:layout_constraintTop_toBottomOf="@id/view"
+        app:layout_constraintTop_toBottomOf="@id/view1"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -318,7 +341,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@id/imageView10"
         app:layout_constraintStart_toEndOf="@id/imageView9"
-        app:layout_constraintTop_toBottomOf="@id/view"
+        app:layout_constraintTop_toBottomOf="@id/view1"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -333,3 +356,4 @@
         app:layout_constraintTop_toBottomOf="@id/imageView11" />
 
 </android.support.constraint.ConstraintLayout>
+
