--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -210,7 +210,7 @@
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/imageView4"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/order" />
 
     <TextView
         android:id="@+id/textView14"
@@ -229,7 +229,7 @@
         app:layout_constraintEnd_toStartOf="@id/imageView5"
         app:layout_constraintStart_toEndOf="@id/imageView4"
         app:layout_constraintTop_toTopOf="@id/imageView4"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/collection" />
 
     <TextView
         android:id="@+id/textView15"
@@ -323,7 +323,7 @@
         app:layout_constraintEnd_toStartOf="@id/imageView8"
         app:layout_constraintStart_toEndOf="@id/imageView11"
         app:layout_constraintTop_toBottomOf="@id/view1"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/purchase_people" />
 
     <TextView
         android:id="@+id/textView19"
