--- a/app/src/main/res/layout/goods_item.xml
+++ b/app/src/main/res/layout/goods_item.xml
@@ -26,4 +26,14 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_goods"
         tools:text="dress" />
 
+    <TextView
+        android:id="@+id/tv_goods_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="@+id/tv_goods"
+        app:layout_constraintStart_toStartOf="@+id/tv_goods"
+        app:layout_constraintTop_toBottomOf="@+id/tv_goods" />
+
 </android.support.constraint.ConstraintLayout>
