--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -357,5 +357,24 @@
         app:layout_constraintStart_toStartOf="@id/imageView11"
         app:layout_constraintTop_toBottomOf="@id/imageView11" />
 
+    <ImageView
+        android:id="@+id/iv_user_concern"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintEnd_toStartOf="@+id/iv_user_collect"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="关注"
+        app:layout_constraintEnd_toEndOf="@+id/iv_user_concern"
+        app:layout_constraintStart_toStartOf="@+id/iv_user_concern"
+        app:layout_constraintTop_toBottomOf="@+id/iv_user_concern" />
+
 </android.support.constraint.ConstraintLayout>
 
