--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -204,7 +204,7 @@
         app:layout_constraintTop_toBottomOf="@id/imageView4" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/iv_user_trade"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="32dp"
@@ -219,14 +219,14 @@
         android:layout_marginTop="8dp"
         android:text="@string/order"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="@id/imageView5"
-        app:layout_constraintStart_toStartOf="@id/imageView5"
-        app:layout_constraintTop_toBottomOf="@id/imageView5" />
+        app:layout_constraintEnd_toEndOf="@id/iv_user_trade"
+        app:layout_constraintStart_toStartOf="@id/iv_user_trade"
+        app:layout_constraintTop_toBottomOf="@id/iv_user_trade" />
     <ImageView
         android:id="@+id/iv_user_collect"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        app:layout_constraintEnd_toStartOf="@id/imageView5"
+        app:layout_constraintEnd_toStartOf="@id/iv_user_trade"
         app:layout_constraintStart_toEndOf="@id/imageView4"
         app:layout_constraintTop_toTopOf="@id/imageView4"
         app:srcCompat="@drawable/collection" />
